amend - 270bf78-65fcca270gceeab270ceeec39-26c2726gcea52-26c39-13b2726fc78-0a65-39d52-0a39-13b2726104-13b91-0abbdb2778effadb2791cgfabc

--- a/public/stylesheets/sass/styles.scss
+++ b/public/stylesheets/sass/styles.scss
@@ -26,6 +26,9 @@ body{background-color:$lt-blu;}
         a{color:#ddd;}
     }
 }
+@media screen and (max-width : 760px) and (orientation : landscape) {
+    #header-container{height:$top-space - 20px;}
+}
 
 #nav-container{position:fixed;z-index:98;top:$top-space;background-color:$bl-red;border-bottom:1px solid darken($bl-red, 10%);
     ul{display:block;position:relative;}
