amend - 330fce265-106ccb330hdccda33106hacdd159-106c330bcab212-159d159-53b33106a371-0a318-159d265-53b212-53b159-53b3353eaacbc3353efdeaa33212dgceac

--- a/public/stylesheets/sass/styles.scss
+++ b/public/stylesheets/sass/styles.scss
@@ -27,7 +27,7 @@ body{background-color:$lt-blu;}
     }
 }
 @media screen and (max-width : 760px) and (orientation : landscape) {
-    #header-container{height:$top-space - 20px;}
+    #header-container{height:$top-space - 30px;}
 }
 
 #nav-container{position:fixed;z-index:98;top:$top-space;background-color:$bl-red;border-bottom:1px solid darken($bl-red, 10%);
@@ -87,6 +87,9 @@ body{background-color:$lt-blu;}
             }
         }
     }*/
+}
+@media screen and (max-width : 760px) and (orientation : landscape) {
+    #nav-container{height:$top-space - 30px;}
 }
 
 #main-container{position:relative;top:$top-space+50px;padding-bottom:$top-space;
