--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -271,7 +271,22 @@ body {
 
 @media screen and (max-width : 760px) and (orientation : landscape) {
   #header-container {
-    height: 40px; } }
+    height: 40px; }
+    #header-container .college_logo {
+      position: absolute;
+      top: 0.8em;
+      right: 1.8em; }
+      #header-container .college_logo img {
+        border: 0;
+        width: 40px;
+        height: 22px; }
+    #header-container h1#title {
+      font-family: 'Annie Use Your Telescope',cursive;
+      font-size: 20pt;
+      margin-left: 0.6em;
+      margin-top: 0.3em; }
+      #header-container h1#title a {
+        color: #ddd; } }
 #nav-container {
   position: fixed;
   z-index: 98;
@@ -362,7 +377,7 @@ body {
 
 @media screen and (max-width : 760px) and (orientation : landscape) {
   #nav-container {
-    height: 40px; } }
+    top: 40px; } }
 #main-container {
   position: relative;
   top: 120px;
