--- a/public/stylesheets/sass/styles.scss
+++ b/public/stylesheets/sass/styles.scss
@@ -26,6 +26,16 @@ body{background-color:$lt-blu;}
         a{color:#ddd;}
     }
 }
+@media screen and (max-width : 499px) {
+    #header-container{height:$top-space - 35px;
+        .college_logo{position:absolute;top:0.5em;right:0.8em;
+            img{border:0;width:40px;height:22px;}
+        }
+        h1#title{font-family:'Annie Use Your Telescope',cursive;font-size:18pt;margin-left:0.5em;margin-top:0.1em;
+            a{color:#ddd;}
+        }
+    }
+}
 @media screen and (max-width : 760px) and (orientation : landscape) {
     #header-container{height:$top-space - 35px;
         .college_logo{position:absolute;top:0.5em;right:0.8em;
@@ -75,8 +85,10 @@ body{background-color:$lt-blu;}
     
     @media screen and (min-width : 761px) {
         ul{left:-10px;
-            li{display:inline-block;list-style:none;margin:0 3px;padding:0;
-                a{font-size:12pt;border-radius:4px;margin:0 0.2em;padding:0.2em;}
+            li{display:inline-block;list-style:none;margin:0.2em 0.5em;padding:0;
+                a{font-size:12pt;border-radius:4px;margin:0 0.2em;padding:0.2em;
+                    &:hover{background:#68a;}
+                }
                 .my{display:inline;}
                 .all_my{display:none;}
                 .log_my{display:none;}
@@ -84,6 +96,9 @@ body{background-color:$lt-blu;}
             }
         }
     }
+}
+@media screen and (max-width : 499px) {
+    #nav-container{top:$top-space - 35px;}
 }
 @media screen and (max-width : 760px) and (orientation : landscape) {
     #nav-container{top:$top-space - 35px;}
@@ -111,14 +126,7 @@ body{background-color:$lt-blu;}
             .box{padding:2px;margin:1px;border:1px dotted $tr-br-blu;}
             pre{text-align:left;}
         }
-    }/*@media screen and (max-device-width : 499px) {
-        #left{display:block;
-            h3{float:left;}
-            .user_image{float:left;}
-            .box{padding:2px;margin:1px;border:1px dotted $tr-br-blu;}
-            pre{text-align:left;}
-        }
-    }*/
+    }
     
     @media screen and (min-width : 500px) and (max-width : 760px) {
         #left{float:left;width:21%;display:inline-block;
@@ -127,14 +135,7 @@ body{background-color:$lt-blu;}
             .box{padding:2px;margin:1px;border:1px dashed $tr-br-blu;}
             pre{text-align:left;}
         }
-    }/*@media screen and (min-device-width : 500px) and (max-device-width : 760px) {
-        #left{float:left;width:19%;display:inline-block;
-            h3{float:left;}
-            .user_image{float:left;}
-            .box{padding:2px;margin:1px;border:1px dashed $tr-br-blu;}
-            pre{text-align:left;}
-        }
-    }*/
+    }
 
     @media screen and (min-width : 761px) {
         #left{float:left;width:14%;margin-left:6px;display:inline-block;
@@ -143,55 +144,42 @@ body{background-color:$lt-blu;}
             .box{padding:2px;margin:1px;border:1px solid $tr-br-blu;}
             pre{text-align:left;}
         }        
-    }/*@media screen and (min-device-width : 761px) {
-        #left{float:left;width:12%;margin-left:8px;display:inline-block;
-            h3{float:left;}
-            .user_image{float:left;}
-            .box{padding:2px;margin:1px;border:1px solid $tr-br-blu;}
-            pre{text-align:left;}
-        }        
-    }*/
+    }
 
 
 
     @media screen and (max-width : 499px) {
         #middle{display:block;}
-    }/*@media screen and (max-device-width : 499px) {
-        #middle{display:block;}
-    }*/
+    }
 
     @media screen and (min-width : 500px) and (max-width : 760px) {
         #middle{width:70%;float:right;display:inline-block;}
-    }/*@media screen and (min-device-width : 500px) and (max-devicewidth : 760px) {
-        #middle{width:70%;float:right;display:inline-block;}
-    }*/
+    }
     
     @media screen and (min-width : 761px) {
         #middle{width:63%;display:inline-block;position:absolute;margin-left:19%;}
-    }/*@media screen and (min-device-width : 761px) {
-        #middle{width:60%;display:inline-block;}
-    }*/
+    }
     
     
     
     @media screen and (max-width : 499px) {
         #right{display:block;}
-    }/*@media screen and (max-device-width : 499px) {
-        #right{display:block;}
-    }*/
+    }
     
     @media screen and (min-width : 500px) and (max-width : 760px) {
         #right{float:left;width:21%;display:inline-block;clear:left;}
-    }/*@media screen and (min-device-width : 500px) and (max-device-width : 760px) {
-        #right{float:left;width:19%;display:inline-block;}
-    }*/
+    }
     
     @media screen and (min-width : 761px) {
         #right{display:inline-block;float:right;width:13%;margin-right:8px;vertical-align:top;}
-    }/*@media screen and (min-device-width : 761px) {
-        #right{display:inline-block;float:right;width:12%;margin-right:8px;}
-    }*/
+    }
     
+}
+@media screen and (max-width : 499px) {
+    #main-container{top:$top-space + 15px;}
+}
+@media screen and (max-width : 760px) and (orientation : landscape) {
+    #main-container{top:$top-space + 15px;}
 }
 
 #footer-container{position:fixed;bottom:0;background-color:$dk-blu;
