amend - 1200hbe200-0adc1200gceaba12080afbbc120-40b1200acae160-40b120-80c120120a280-200f240-120d200-160e160-80cc120200hedecc1200bbcaba120200abbabc

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -423,7 +423,7 @@ body {
       #nav-container ul li {
         display: inline-block;
         list-style: none;
-        margin: 0 0.5em; }
+        margin: 0 1em; }
         #nav-container ul li a {
           display: inline-block;
           font-size: 10pt;
@@ -431,7 +431,7 @@ body {
           border-bottom: 0;
           border-top: 0;
           margin: 0;
-          padding: 0.5em;
+          padding: 1em 1em;
           background-color: #337799; }
         #nav-container ul li .my {
           display: inline; }
