--- a/public/stylesheets/sass/styles.scss
+++ b/public/stylesheets/sass/styles.scss
@@ -100,8 +100,8 @@ body{background-color:$lt-blu;}
 //    Tablet styles: 
     @media only screen and (min-device-width : 761px) and (max-device-width : 1280px) {
         ul{left:5px;
-            li{display:inline-block;list-style:none;margin:0 0.5em;
-                a{display:inline-block;font-size:10pt;border-radius:2px;border-bottom:0;border-top:0;margin:0;padding:0.5em;background-color:$bl-red;}
+            li{display:inline-block;list-style:none;margin:0 1em;
+                a{display:inline-block;font-size:10pt;border-radius:2px;border-bottom:0;border-top:0;margin:0;padding:1em 1em;background-color:$bl-red;}
                 .my{display:inline;}
                 .all_my{display:none;}
                 a.icon{display:inline-block;position:relative;top:-0.1em;
